@@ -1,5 +1,11 @@
 2011-09-15  H.J. Lu  <hongjiu.lu@intel.com>
 
+	PR ld/13177
+	* elflink.c (elf_gc_sweep_symbol): Also hide symbols without PLT
+	nor GOT references.
+
+2011-09-15  H.J. Lu  <hongjiu.lu@intel.com>
+
 	PR ld/12975
 	* bfd-in.h (bfd_elf_size_dynamic_sections): Remove pointer
 	to struct bfd_elf_version_tree.
